update response data to use generics
